--- a/7월 3주차/7월 18일.MD
+++ b/7월 3주차/7월 18일.MD
@@ -44,6 +44,8 @@ layout_alignParentTop = "true"
 ```
     layout_column="1" 놓여질 위치
     layout_span="2" column span
+-----------------------------------------------------------
+stretchColumns = "*" 모두 같은 크기로 확장 전체에 채움
 ```
 
 
@@ -233,4 +235,72 @@ class MainActivity : AppCompatActivity() {
 
     }
 }
+```
+
+### TableLayout 연습
+- android:stretchColumns="*"
+- 칸 비워져 있으면 꽉 채우기
+```
+<?xml version="1.0" encoding="utf-8"?>
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:stretchColumns="*">
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#91C0E6"
+            android:text="1번"
+            />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#95EA98"
+            android:layout_span="2"
+            android:text="2번"
+            />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#F4EA8F"
+            android:text="3번"
+            />
+
+
+
+    </TableRow>
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#91C0E6"
+            android:layout_column="1"
+            android:text="1번"
+            />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#95EA98"
+            android:layout_column="1"
+            android:text="2번"
+            />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#F4EA8F"
+            android:layout_column="2"
+            android:text="3번"
+            />
+    </TableRow>
+
+</TableLayout>
 ```
