--- a/7월 3주차/7월 18일.MD
+++ b/7월 3주차/7월 18일.MD
@@ -40,6 +40,13 @@ layout_alignParentTop = "true"
 
 ## TableLayout
 - 테이블로 구성해서 구현
+- 표와 같은 형태를 구성할 때 유용하게 사용
+- GridLayout
+- TableRow ( <Buuton> ~ )
+- layout_column : 0부터 시작, 배치될 시작위치
+- stretchColumn : 자동확장해서 행을 맞춘다.
+- shrinkColumn : 자동축소해서 행을 맞춘다.
+- layout_span : 열을 합침
 - 속성
 ```
     layout_column="1" 놓여질 위치
