--- a/7월 3주차/7월 19일.MD
+++ b/7월 3주차/7월 19일.MD
@@ -14,3 +14,356 @@
 ## 학습목표
 
 코틀린 문법
+
+
+### TableLayout 이용 계산기 만들기
+```kotlin
+package com.example.myapp29k
+
+import androidx.appcompat.app.AppCompatActivity
+import android.os.Bundle
+import android.view.View
+import android.widget.Button
+import android.widget.EditText
+import android.widget.TextView
+import android.widget.Toast
+import java.text.DecimalFormat
+
+class MainActivity : AppCompatActivity() {
+
+    var editText1: EditText? = null
+    var editText2: EditText? = null
+
+    lateinit var btnAdd:Button
+    lateinit var btnMin:Button
+    lateinit var btnMul:Button
+    lateinit var btnDiv:Button
+    lateinit var btnRe:Button
+    lateinit var textResult: TextView
+    lateinit var num1:String
+    lateinit var num2:String
+    var result:Double = 0.0
+
+    var numBtnIDs = arrayOf(
+        R.id.btnNum0,R.id.btnNum1,R.id.btnNum2,R.id.btnNum3
+        ,R.id.btnNum4,R.id.btnNum5,R.id.btnNum6
+        ,R.id.btnNum7,R.id.btnNum8,R.id.btnNum9
+    )
+
+    var i = 0
+
+    override fun onCreate(savedInstanceState: Bundle?) {
+        super.onCreate(savedInstanceState)
+        setContentView(R.layout.activity_main)
+
+        editText1 = findViewById<View>(R.id.edit1) as EditText
+        editText2 = findViewById(R.id.edit2) as EditText
+        btnAdd = findViewById(R.id.btnAdd) as Button
+        btnMin = findViewById(R.id.btnMin) as Button
+        btnMul = findViewById(R.id.btnMul) as Button
+        btnDiv = findViewById(R.id.btnDiv) as Button
+        btnRe = findViewById(R.id.btnRe) as Button
+        textResult = findViewById(R.id.textResult) as TextView
+        val numButtons = arrayOfNulls<Button>(10)
+
+        btnAdd!!.setOnTouchListener{ v,event ->
+            num1 = editText1!!.text.toString()
+            num2 = editText2!!.text.toString()
+            result = num1!!.toDouble()+num2!!.toDouble()
+            textResult!!.text="계산결과: " + result.toString()
+                    false
+        }
+        btnMin!!.setOnTouchListener{ v,event ->
+            num1 = editText1!!.text.toString()
+            num2 = editText2!!.text.toString()
+            result = num1!!.toDouble()-num2!!.toDouble()
+            textResult!!.text="계산결과: " + result.toString()
+            false
+        }
+        btnMul!!.setOnTouchListener{ v,event ->
+            num1 = editText1!!.text.toString()
+            num2 = editText2!!.text.toString()
+            result = num1!!.toDouble()*num2!!.toDouble()
+            textResult!!.text="계산결과: " + result.toString()
+            false
+        }
+        btnDiv!!.setOnTouchListener{ v,event ->
+            num1 = editText1!!.text.toString()
+            num2 = editText2!!.text.toString()
+            result = num1!!.toDouble()/num2!!.toDouble()
+
+            // 소수점 포맷처리
+            val df = DecimalFormat("#,###.###")
+            val re = df.format(result)
+
+            textResult!!.text="계산결과: ${re}"
+
+            false
+        }
+
+
+
+
+        // 버튼마다 리스너를 처리
+        i=0
+        while(i<numBtnIDs.size){
+            numButtons[i] = findViewById<View>(numBtnIDs[i]) as Button
+            i++
+        }
+    
+        // 버튼에 리스너를 단다
+        i=0
+        while(i<numBtnIDs.size){
+            val index:Int
+            index = i
+
+            numButtons[index]!!.setOnClickListener(View.OnClickListener {
+
+                if(editText1!!.isFocused == true){
+                    num1 = editText1!!.text.toString() + numButtons[index]!!.text.toString()
+                    editText1!!.setText(num1)
+                }
+                else if(editText2!!.isFocused == true){
+                    num2 = editText2!!.text.toString() + numButtons[index]!!.text.toString()
+                    editText2!!.setText(num2)
+                }
+                else {
+                    Toast.makeText(applicationContext, "먼저 에딧텍스트를 선택해주세요",Toast.LENGTH_LONG)
+                }
+            })
+
+            i++
+
+        }
+
+
+    }
+}
+```
+
+- xml
+``` xml
+<?xml version="1.0" encoding="utf-8"?>
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:stretchColumns="*"
+    android:padding="4dp"
+    >
+
+    <TableRow>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Table Calculator"
+            android:gravity="center_horizontal"
+            android:textSize="30dp"
+            android:textStyle="bold"
+            android:textColor="#6B97F8"
+            android:layout_span="5"
+
+            />
+
+    </TableRow>
+
+    <TableRow
+        android:layout_marginTop="20dp"
+        >
+
+        <EditText
+            android:id="@+id/edit1"
+            android:layout_height="48dp"
+            android:layout_span="5"
+            android:hint="숫자2 입력"
+            />
+    </TableRow>
+    <TableRow
+        android:layout_marginTop="20dp"
+        >
+        <EditText
+            android:id="@+id/edit2"
+            android:layout_height="48dp"
+            android:layout_span="5"
+            android:hint="숫자2 입력"
+            />
+    </TableRow>
+
+
+    <TableRow
+        android:layout_marginTop="10dp"
+        >
+        <Button
+            android:id="@+id/btnNum0"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#6B97F8"
+            android:layout_marginRight="10dp"
+            android:text="0"
+            android:textColor="#ffffff"
+            />
+        <Button
+            android:id="@+id/btnNum1"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#6B97F8"
+            android:layout_marginRight="10dp"
+            android:text="1"
+            android:textColor="#ffffff"
+            />
+        <Button
+            android:id="@+id/btnNum2"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#6B97F8"
+            android:layout_marginRight="10dp"
+            android:text="2"
+            android:textColor="#ffffff"
+            />
+        <Button
+            android:id="@+id/btnNum3"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#6B97F8"
+            android:layout_marginRight="10dp"
+            android:text="3"
+            android:textColor="#ffffff"
+            />
+        <Button
+            android:id="@+id/btnNum4"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#6B97F8"
+            android:layout_marginRight="10dp"
+            android:text="4"
+            android:textColor="#ffffff"
+            />
+    </TableRow>
+
+    <TableRow
+        android:layout_marginTop="10dp"
+        >
+        <Button
+            android:id="@+id/btnNum5"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#6B97F8"
+            android:layout_marginRight="10dp"
+            android:text="5"
+            android:textColor="#ffffff"
+            />
+        <Button
+            android:id="@+id/btnNum6"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#6B97F8"
+            android:layout_marginRight="10dp"
+            android:text="6"
+            android:textColor="#ffffff"
+            />
+        <Button
+            android:id="@+id/btnNum7"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#6B97F8"
+            android:layout_marginRight="10dp"
+            android:text="7"
+            android:textColor="#ffffff"
+            />
+        <Button
+            android:id="@+id/btnNum8"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#6B97F8"
+            android:layout_marginRight="10dp"
+            android:text="8"
+            android:textColor="#ffffff"
+            />
+        <Button
+            android:id="@+id/btnNum9"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#6B97F8"
+            android:layout_marginRight="10dp"
+            android:text="9"
+            android:textColor="#ffffff"
+            />
+    </TableRow>
+
+    <TableRow
+        android:layout_marginTop="30dp"
+        >
+        <Button
+            android:id="@+id/btnAdd"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_span="5"
+            android:backgroundTint="#F37268"
+            android:layout_marginRight="10dp"
+            android:text="더하기"
+            android:textColor="#ffffff"
+            />
+    </TableRow>
+    <TableRow>
+        <Button
+            android:id="@+id/btnMin"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_span="5"
+            android:backgroundTint="#F37268"
+            android:layout_marginRight="10dp"
+            android:text="빼기"
+            android:textColor="#ffffff"
+            />
+    </TableRow>
+    <TableRow>
+        <Button
+            android:id="@+id/btnMul"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_span="5"
+            android:backgroundTint="#F37268"
+            android:layout_marginRight="10dp"
+            android:text="곱하기"
+            android:textColor="#ffffff"
+            />
+    </TableRow>
+    <TableRow>
+        <Button
+            android:id="@+id/btnDiv"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_span="5"
+            android:backgroundTint="#F37268"
+            android:layout_marginRight="10dp"
+            android:text="나누기"
+            android:textColor="#ffffff"
+            />
+    </TableRow>
+    <TableRow>
+        <Button
+            android:id="@+id/btnRe"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:layout_span="5"
+            android:backgroundTint="#F37268"
+            android:layout_marginRight="10dp"
+            android:text="리셋"
+            android:textColor="#ffffff"
+            />
+    </TableRow>
+
+    <TableRow>
+        <TextView
+            android:id="@+id/textResult"
+            android:layout_marginTop="20dp"
+            android:layout_span="5"
+            android:text="계산결과 :"
+            android:textColor="#AAD873"
+            android:textSize="30dp"
+            />
+
+    </TableRow>
+
+
+</TableLayout>
+```
