--- a/7월 3주차/7월 19일.MD
+++ b/7월 3주차/7월 19일.MD
@@ -15,8 +15,21 @@
 
 코틀린 문법
 
+### GridLayout
+```
+    GridLayout
+        . rowCOunt : 행의 갯수
+        . columnCount : 열의 갯수
+        . layout_row : 행의 배치위치
+        . layout_column : 열의 배치위치
 
-### TableLayout 이용 계산기 만들기
+        . layout_rowSpan:
+        . layout_columnSpan
+        . layout_gravity = "fill_vertical" / "fill_horizontal"
+```
+
+
+## TableLayout 이용 계산기 만들기
 ```kotlin
 package com.example.myapp29k
 
@@ -367,3 +380,5 @@ class MainActivity : AppCompatActivity() {
 
 </TableLayout>
 ```
+
+## GridLayout
