--- a/7월 3주차/7월 21일.MD
+++ b/7월 3주차/7월 21일.MD
@@ -1,19 +1,7 @@
 # Review
 
 ### 코틀린 문법
-코틀린 문법
-### GridLayout
-```
-    GridLayout
-        . rowCOunt : 행의 갯수
-        . columnCount : 열의 갯수
-        . layout_row : 행의 배치위치
-        . layout_column : 열의 배치위치
-
-        . layout_rowSpan:
-        . layout_columnSpan
-        . layout_gravity = "fill_vertical" / "fill_horizontal"
-```
+- 팀 프로젝트 진행
 
 
 
