--- a/7월 4주차/7월 24일.MD
+++ b/7월 4주차/7월 24일.MD
@@ -1,10 +1,15 @@
 # Review
-
-### 코틀린 문법
 - 팀 프로젝트 진행
 
 
 
 ## 학습목표
 
-- 팀 프로젝트 진행
+### Inflater
+- Xml을 동적으로 화면에 출력
+
+### Fragement
+- Activity 안에 Activity
+
+### Adapter
+- 배열, 파일, DB의 값을 View에 출력
