--- a/7월 4주차/7월 24일.MD
+++ b/7월 4주차/7월 24일.MD
@@ -4,23 +4,4 @@
 
 
 ## 학습목표
-
-### Inflater
-- Xml을 동적으로 화면에 출력
-
-### Fragement
-- Activity 안에 Activity
-
-### Adapter
-- 배열, 파일, DB의 값을 View에 출력
-
-
-## Inflater
-- XML을 화면에 동적으로 출력할때 사용한다.
-- 구현방법
-```
-  1) Inflater 객체 가져온다
-  2) inflater.inflate(추가할 뷰, 담을 컨테이너, true/false)
-  3) 컨테이너.addView(view)
-
-```
+- 팀 프로젝트
