--- a/7월 4주차/7월 31일.MD
+++ b/7월 4주차/7월 31일.MD
@@ -1,1 +1,11 @@
+# Review
+- 팀 프로젝트 진행
+
+
+
+## 학습목표
+- 1~5교시 : 팀 프로젝트 실습
+- 6~8교시 : 기업프로젝트 설명회
+- 팀 프로젝트 내부발표 - (8/3, 목)
+- Android 정기평가 - (8/9, 수)
 
