--- a/8월 2주차/8월 7일.MD
+++ b/8월 2주차/8월 7일.MD
@@ -1,1 +1,14 @@
+# Review
+- 팀 프로젝트 진행
+
+
+
+## 학습목표
+- 취업활동
+- 데이터베이스 EVIEW
+- File저장소 학습
+- 포트폴리오 기술서 작성
+  - 팀 프로젝트 서류 : ~ 8/7(화)
+  - 개인프로젝트 서류 : ~ 8/9(수)
+- Android 정기평가 - 8/9(수)
 
